# fastui-chat

./: .gitignore  LICENSE  README.md  dev-install.sh  pyproject.toml  roadmap.todo
examples/: custom_llm.py  fastapi_router.py  hot_reload.py  minimal.py  minimalistic.py  redis_backend.py  simple_chatbot.py
src/fastui_chat/: __init__.py  app.py  chat.py  components.py  db.py  fastui_core.py  history.py  history_factories.py  runtime.py  session.py  types.py
src/fastui_chatgpt/: app.py  chat.py
src/fastui_lab/: __main__.py  app.py
