[project]
name = "fastui-chat"
version = "0.0.2"
description = "Minimalistic chatbot ui using fastapi, fastui and langchain."
authors = [
    { name = "Shroominic", email = "contact@shroominic.com" }
]
dependencies = [
    "langchain_core>=0.1",
    "fastui[fastapi] @ git+https://github.com/pydantic/FastUI.git@main#subdirectory=src/python-fastui",
    "uvicorn>=0.24.0.post1",
]
readme = "README.md"
requires-python = ">= 3.10"
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.7.1",
    "ruff>=0.1.8",
    "langchain[openai] >= 0.0.352",
    "langchain_community @ git+https://github.com/langchain-ai/langchain.git@master#subdirectory=libs/community",
]

[tool.rye.scripts]
startapp = "python examples/simple_chatbot.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastui_chat"]

[tool.mypy]
mypy_path = "src/"
ignore_missing_imports = true
follow_imports = "skip"
exclude = "(fastui/.*|venv/.*|dist/.*|wheels/.*|.*egg-info)"

[tool.ruff]
select = ["E", "F", "I"]
